--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Belkhadiri Rihab CV</title>
 
   </head>
-  <body id="haut">
+  <body>
     <header class="header">
       <h1 class="head">
         <span class="head-name" itemprop="name">Belkhadiri Rihab</span>
@@ -36,13 +36,13 @@
             <a class="nav-link " data-link href="#competences">compétences</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-link href="#experiences">Formations</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" data-link href="#experiences">expérience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-link href="#contact">intérêts</a>
+            <a class="nav-link" data-link href="#formation">Formations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-link href="#interets">intérêts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-link href="#contact">contact</a>
@@ -114,11 +114,11 @@
         <div class="col-right large-col-8 large-offset-right-1 medium-col-10 medium-txt-left mmb txt-center print-col-10 print-txt-left">
           <p class="inline-block">Pôle emploi Nancy Cristallerie</p>
         </div>
-          <p class="col large-offset-1 medium-col-2 medium-offset-0 small-col-8 small-offset-2 xsmall-col-12 content-date mb bg-ming print-col-2 print-ming">
+          <p class="col large-offset-1 medium-col-2 medium-offset-0 small-col-8 small-offset-2 xsmall-col-12 content-date mb bg-ming print-col-2 print-ming brpp">
             <span class="medium-block content-date-month print-block">
               <abbr title="01/06">Juin</abbr>
             </span>
-            <span class="medium-block content-date-year print-block"> 2019</span>
+            <span class="medium-block content-date-year print-block "> 2019<br></span>
           </p>
         <div class="col large-offset-3 small-col-8 small-offset-2 clear">
         <p>
@@ -141,83 +141,61 @@
       </div>
       <div class="row mmmb">
         <p class="col-right large-col-8 large-offset-right-1 medium-col-10 medium-txt-left content-title txt-center print-col-10 print-txt-left">
-          Formatrice en langue étrangère Anglais Pro à Nancy
+          Formatrice en langue étrangère Anglais
         </p>
-        <p class="col large-col-1 large-offset-1 medium-col-1 medium-offset-0 small-col-4 small-offset-2 xsmall-col-6 content-date bg-ming print-col-1 print-ming">
-          <span class="medium-block content-date-month print-block">November</span>
-          <span class="medium-block content-date-year print-block">2017</span>
+        <div class="col-right large-col-8 large-offset-right-1 medium-col-10 medium-txt-left mmb txt-center print-col-10 print-txt-left">
+          <p class="inline-block"> Anglais Pro à Nancy</p>
+        </div>
+        <p class="col large-col-1 medium-col-1 small-col-4 xsmall-col-6 content-date mb bg-ming print-col-1 print-ming brp">
+          <span class="medium-block content-date-month print-block">November-Mars</span>
+          <span class="medium-block content-date-year print-block">2017-2019</span>
         </p>
-        <p class="col large-col-1 medium-col-1 small-col-4 xsmall-col-6 content-date mb bg-ming print-col-1 print-ming">
-          <span class="medium-block content-date-month print-block">Mars</span>
-          <span class="medium-block content-date-year print-block">2019</span>
+        <div class="col large-offset-3 small-col-8 small-offset-2 clear">
+        <p>
+          <i class="fas fa-square"></i>
+          Animer des activités périscolaires en anglais
         </p>
+        </div>
+        <div class="col large-offset-3 small-col-8 small-offset-2 clear">
+        <p>
+          <i class="fas fa-square"></i>
+          Prendre part à des réunions institutionnelles
+        </p>
+        </div>
+        <div class="col large-offset-3 small-col-8 small-offset-2 clear">
+        <p>
+          <i class="fas fa-square"></i>
+          Remplacements dans les écoles de Nancy et alentours </p>
+        </div>
+      </div>
+      <div class="row mmmb">
+        <p class="col-right large-col-8 large-offset-right-1 medium-col-10 medium-txt-left content-title txt-center print-col-10 print-txt-left">
+          Animatrice volontaire
+        </p>
+        <div class="col-right large-col-8 large-offset-right-1 medium-col-10 medium-txt-left mmb txt-center print-col-10 print-txt-left">
+          <p class="inline-block">Institut scout et laïques (MJC) à Nancyy</p>
+        </div>
+        <p class="col large-col-1 medium-col-1 small-col-4 xsmall-col-6 content-date mb bg-ming print-col-1 print-ming brp">
+          <span class="medium-block content-date-month print-block">Avril</span>
+          <span class="medium-block content-date-year print-block">2018</span>
+        </p>
+        <div class="col large-offset-3 small-col-8 small-offset-2 clear">
+        <p>
+          <i class="fas fa-square"></i>
+          Mise en place des structures pour l’épanouissement des enfants
+        </p>
+        </div>
+        <div class="col large-offset-3 small-col-8 small-offset-2 clear">
+        <p>
+          <i class="fas fa-square"></i>
+          Accompagner les enfants dans les activités et animationsproposées
+        </p>
+        </div>
       </div>
     </section>
 
 
-<!--
-    <ul class="content-list-info">
-      <li>Sensibilisation à la dématérialisation</li>
-      <li>Lutte contre l'acculturation numérique</li>
-      <li>Former le public à l'utilisation de l'équipement informatique</li>
-    </ul> -->
 
-
-    <div class="container-fluid bg-light blop">
-      <div class="container text-center ">
-        <section id="experiences">
-            <div class="container">
-                    <strong>2019-2020 | Service civique à Pôle emploi, Nancy Cristallerie(8 mois)</strong>
-
-                        <p>Sensibilisation à la dématérialisation</p>
-                        <p>Lutte contre l'acculturation numérique</p>
-                        <p>Lutte contre l'acculturation numérique</p>
-
-                    <strong>2017-2019 | Formatrice en langue étrangère, Centre de Formation Anglais Pro à Nancy</strong>
-
-                        <p>Animer des activités périscolaires en anglais</p>
-                        <p>Prendre part à des réunions institutionnelles</p>
-                        <p>Faire des remplacements dans les écoles de la ville de Nancy et alentours</p>
-
-                    <strong>2017-2018 | Animatrice volontaire, Institut scout et laïques (MJC) à Nancy</strong>
-
-                        <p>Mise en place des structures pour l’épanouissement des enfants</p>
-                        <p>Accompagner les enfants dans les activités et animationsproposées</p>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-    </div>
-    <!-- <div class="container-fluid bg-dark text blop">
-    <div class="container text-center ">
-    <section id="formation"  >
-    <h3 ><strong> Mes Formations</strong></h3>
-    <hr class="light">
-
-    <strong>2019-2020| Formation développeur web intégrateur niveau III</strong>
-    <p >ALAJI | villers lès-Nancy</p>
-
-
-    <strong>2018-2019 | L1 Informatique-Mathématique</strong>
-    <p >Faculté des sciences et technologies |Vandœuvre lès Nancy</p>
-
-
-    <strong>2017-2018 | Formation DEFLE</strong>
-    <p>Faculté de lettres et sciences humaines</p>
-
-
-    <strong>2015-2016 | Baccalauréat Scientifique, Mention très bien</strong>
-    <p >Lycée 86éme | DjeddahArabie Saoudite</p>
-
-
-    <strong>2013-2014 | Formation en Informatique générale</strong>
-    <p >Lycée 86éme | DjeddahArabie Saoudite</p>
-
-
-  </section>
-</div>
-</div> -->
     <section id="interets">
       <h2 class="title"> Intérêts</h2>
       <p class="intro"></p>
@@ -289,6 +267,35 @@
         </section>
       </div>
     </div> -->
+    <!-- <div class="container-fluid bg-dark text blop">
+    <div class="container text-center ">
+    <section id="formation"  >
+    <h3 ><strong> Mes Formations</strong></h3>
+    <hr class="light">
+
+    <strong>2019-2020| Formation développeur web intégrateur niveau III</strong>
+    <p >ALAJI | villers lès-Nancy</p>
+
+
+    <strong>2018-2019 | L1 Informatique-Mathématique</strong>
+    <p >Faculté des sciences et technologies |Vandœuvre lès Nancy</p>
+
+
+    <strong>2017-2018 | Formation DEFLE</strong>
+    <p>Faculté de lettres et sciences humaines</p>
+
+
+    <strong>2015-2016 | Baccalauréat Scientifique, Mention très bien</strong>
+    <p >Lycée 86éme | DjeddahArabie Saoudite</p>
+
+
+    <strong>2013-2014 | Formation en Informatique générale</strong>
+    <p >Lycée 86éme | DjeddahArabie Saoudite</p>
+
+
+  </section>
+</div>
+</div> -->
 
     <!-- <footer class="py-5 bg-dark text-white text-center bottom">
       <div class="container">
@@ -296,7 +303,7 @@
       </div>
     </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://raw.githubusercontent.com/mattboldt/typed.js/master/dist/typed.min.js"></script>
+    <!-- <script src="https://raw.githubusercontent.com/mattboldt/typed.js/master/dist/typed.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
