--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
           <img src="img/photo.png" alt="developpeur web full stack" width="230" height="230" class="mt" itemprop="image">
         </div>
         <p class="col large-col-7 medium-col-8 medium-offset-0 small-col-8 small-offset-2 mmmt">
-          <strong itemprop="jobTitle">Développeur web</strong> curieux, autonome, rigoureux, j'aime les applications simples, rapides et efficaces.<br><br>Un sens de l'écoute et du service renforcé par 8 ans d'expérience à travailler sur des projets variés, une expertise technique en constante progression grâce à une formation perpétuelle. Motivé par le besoin de faire toujours mieux et appuyé par de solides bases acquises lors de mon parcours, je prends plaisir à relever de nouveaux challenges.<br><br>Actuellement en poste, je m'épanouis avec l'équipe de Cocolyze sur une solution SEO atypique afin de rendre le référencement simple et agréable!
+          <strong>Développeuse web</strong> curieuse, autonome, rigoureuse,
+            j'aime les applications simples, rapides et efficaces.<br><br>Un sens de l'écoute,
+            une expertise technique en constante progression grâce à une formation perpétuelle.
+            Motivé par le besoin de faire toujours mieux et appuyé par de solides
+            bases acquises lors de mon parcours,
+            je prends plaisir à relever de nouveaux challenges.<br><br>
+            Actuellement en formation, je cherche un stage de fin étude du 11may 2020 pendant semaine!
         </p>
       </div>
       <div class="btnn text-center">
@@ -139,6 +145,7 @@
         </p>
         </div>
       </div>
+      <hr>
       <div class="row mmmb">
         <p class="col-right large-col-8 large-offset-right-1 medium-col-10 medium-txt-left content-title txt-center print-col-10 print-txt-left">
           Formatrice en langue étrangère Anglais
@@ -168,6 +175,7 @@
           Remplacements dans les écoles de Nancy et alentours </p>
         </div>
       </div>
+      <hr>
       <div class="row mmmb">
         <p class="col-right large-col-8 large-offset-right-1 medium-col-10 medium-txt-left content-title txt-center print-col-10 print-txt-left">
           Animatrice volontaire
