--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons&cms=website' async='async'></script>
+    <script async src="https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons"></script>
     <meta property="og:url" content="https://belkhadiririhab.net/" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
@@ -61,7 +63,11 @@
             Motivé par le besoin de faire toujours mieux et appuyé par de solides
             bases acquises lors de mon parcours,
             je prends plaisir à relever de nouveaux challenges.<br><br>
-            Actuellement en formation, je cherche un stage de fin étude du 11may 2020 pendant semaine!
+            Dans le cadre de ma formation en Développement web, je recherche un poste de
+            stagiaire développeur web à compter du 11\05\2020 et pour une durée de 3 semaine.
+            Le but de ce stage en entreprise est de consolider mes connaissances et mon savoir-faire
+            tout en m'imprégnant du contexte du monde professionnel et de ses contraintes en termes
+            de délais.
         </p>
       </div>
       <div class="btnn text-center">
@@ -243,9 +249,16 @@
         </li>
       </ul>
     </section>
-    <footer>
+    <footer class="text-center bg-dark">
 
+    <i onclick="myFunction()" class="icon fas fa-print"></i>
+    <p class="intro">Copyright @ Belkhadiri Rihab</p>
     </footer>
+    <script>
+      function myFunction() {
+        window.print();
+      }
+    </script>
     <!-- <div class="container-fluid bg-dark blop">
       <div class="container text-center ">
         <section  id="contact">
@@ -305,8 +318,11 @@ myHeader
       </div>
     </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons&cms=website' async='async'></script>
     <!-- <script src="https://raw.githubusercontent.com/mattboldt/typed.js/master/dist/typed.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script async src="https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons"></script>
+
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
