--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <i class="fas fa-square"></i>
           Remplacements dans les écoles de Nancy et alentours </p> id="header"
         </div>
-      </div>myHeader
+      </div>
       <hr>
       <div class="row mmmb">
         <p class="col-right large-col-8 large-offset-right-1 medium-col-10 medium-txt-left content-title txt-center print-col-10 print-txt-left">
@@ -252,7 +252,7 @@
     <footer class="text-center bg-dark">
 
     <i onclick="myFunction()" class="icon fas fa-print"></i>
-    <p class="intro">Copyright @ Belkhadiri Rihab</p>
+    <pre style="margin-top:10px; color:lightgray;">Copyright @ Belkhadiri Rihab</pre>
     </footer>
     <script>
       function myFunction() {
