--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <h1 class="head">
-        <span class="head-name" itemprop="name">Belkhadiri Rihab</span>
+        <span class="head-name">Belkhadiri Rihab</span>
         <span class="head-function ">
           <i >cv développeuse web full-stack  </i>
           <i class="typed-cursor">|</i>
@@ -251,7 +251,7 @@
     </section>
     <footer class="text-center bg-dark">
 
-    <i onclick="myFunction()" class="icon fas fa-print"></i>
+    <i onclick="myFunction()" class=" iconn fas fa-print"></i>
     <pre style="margin-top:10px; color:lightgray;">Copyright @ Belkhadiri Rihab</pre>
     </footer>
     <script>
