--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="description" content="CV d'un développeur web full-stack : développement de sites, applications, PHP, MySQL, MVC, JQuery, Bootstrap,SEO" />
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons&cms=website' async='async'></script>
     <script async src="https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons"></script>
     <meta property="og:url" content="https://belkhadiririhab.net/" />
@@ -11,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="canonical" href="https://belkhadiririhab.net/" />
     <title>Belkhadiri Rihab CV</title>
 
   </head>
@@ -24,13 +24,14 @@
           <i class="typed-cursor">|</i>
         </span>
     </header>
-    <nav id="menu" class="navbar-nav navbar-expand-lg navbar-dark  menu-absolute">
+    <nav class="navbar navbar-expand-lg navbar-dark "  id="menu">
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav text-center mx-auto">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" data-link href="#a-propos">à propos</a>
           </li>
@@ -44,8 +45,9 @@
             <a class="nav-link" data-link href="#interets">intérêts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-link href="#contact">contact</a>
+            <a class="nav-link" data-link href="#contact">Contact</a>
           </li>
+
         </ul>
       </div>
     </nav>
@@ -54,7 +56,7 @@
       <p class="intro">Mon profil en quelques mots.</p>
       <div class="row mmmb">
         <div class="col medium-col-4 print-none txt-center mmmb">
-          <img src="img/photo.png" alt="developpeur web full stack" width="230" height="230" class="mt" itemprop="image">
+          <img src="img/photo.png" alt="developpeur-web" width="230" height="230" class="mt" itemprop="image">
         </div>
         <p class="col large-col-7 medium-col-8 medium-offset-0 small-col-8 small-offset-2 mmmt">
           <strong>Développeuse web</strong> curieuse, autonome, rigoureuse,
@@ -322,7 +324,7 @@ myHeader
     <!-- <script src="https://raw.githubusercontent.com/mattboldt/typed.js/master/dist/typed.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script async src="https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons"></script>
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
